# OvisApp

./: README.md  setup.cfg
docs/: conf.py  requirements.txt
docs/source/: api.rst  changelog.rst
misc/: ovis.bat
ovis/: __init__.py  __main__.py  calculation_pstp.py  constants.py  dummy.py  misc.py  models.py  parameters.py  pstp.py  viscosity.py
ovis/app/: analysis.py  loading.py  main.py  plots.py  pstp.py  pstp2.py  settings.py
ovis/data/: column_types.json  model_parameters.json  test.pickle  xgb_temp_log_model.pkl
ovis/docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
ovis/docs/_sources/: index.rst.txt
ovis/docs/source/: api.html  changelog.html
tests/: sample_test.csv  test_dummy.py
