[metadata]
name = Ovis
version = 0.0.1
author = Ivan Chernyshov, Maria Eremeeva
author_email = ivan.chernyshoff@gmail.com, eremeeva_maria@scamt-itmo.ru
description = Tools for analysis of oil viscosity and its phase transition point
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    GitHub = https://github.com/IvanChernyshov/OvisApp
    Bug Tracker = https://github.com/IvanChernyshov/OvisApp/issues
keywords = oil viscosity phase transition point machine learning ML
classifiers =
    License :: Other/Proprietary License
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Software Development :: User Interfaces

[options]
packages = find:
packages_dir =
    .
install_requires =
    pandas>=2.0
	streamlit>=1.22
	scikit-learn>=1.2,<1.3
python_requires = >=3.10

[options.packages.find]
where = .

[options.package_data]
ovis =
    data/*.json
    data/*.pkl
    data/*.pdf
